--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,10 +26,10 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss"
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "../node_modules/bootstrap-icons/font/bootstrap-icons.scss"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": ["../node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
           },
           "configurations": {
             "production": {
