--- a/package.json
+++ b/package.json
@@ -1,15 +1,50 @@
 {
   "name": "clothes-store",
   "version": "1.0.0",
+  "workspaces": [
+    "frontend",
+    "mock-backend"
+  ],
   "description": "angular clothes-store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill-others \"npm --prefix ./frontend run start\" \"npm --prefix ./mock-backend run start\""
+    "start": "concurrently --kill-others \"npm --prefix ./frontend start\" \"npm --prefix ./mock-backend start\"",
+    "ng": "npm --prefix ./frontend run ng",
+    "build": "npm --prefix ./frontend run build",
+    "watch": "npm --prefix ./frontend run watch",
+    "test": "npm --prefix ./frontend run test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
+    "rxjs": "~7.8.0",
+    "swiper": "^11.0.6",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0",
+    "json-server": "^1.0.0-alpha.23"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular/cli": "^16.2.12",
+    "@angular/compiler-cli": "^16.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
   }
 }
